--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -31,8 +31,8 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 23.4.0
-          cache: npm
+          node-version: 20
+          cache: 'pnpm'
       
       - name: Setup Pages
         uses: actions/configure-pages@v4
@@ -41,9 +41,11 @@ jobs:
         uses: pnpm/action-setup@v2
         with:
           version: 8
+          run_install: false
       
       - name: Install dependencies
-        run:  pnpm install
+        run: |
+          pnpm install --frozen-lockfile
       
       - name: Build
         run:  pnpm run docs:build
