--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -28,6 +28,14 @@ jobs:
         with:
           fetch-depth: 0 # 不是必需的，但可能对某些插件有用
       
+      # 1. 首先安装 pnpm
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+          run_install: false
+      
+      # 2. 然后设置 Node.js
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
@@ -37,18 +45,12 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v4
       
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8
-          run_install: false
-      
+      # 3. 安装依赖
       - name: Install dependencies
-        run: |
-          pnpm install --frozen-lockfile
+        run: pnpm install --frozen-lockfile
       
       - name: Build
-        run:  pnpm run docs:build
+        run: pnpm run docs:build
       
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
