--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -65,7 +65,7 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     name: Deploy
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4 
+    uses: peaceiris/actions-gh-pages@v3
+    with:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: docs/.vitepress/dist
