--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"docs:deploy": "gh-pages -d docs/.vitepress/dist"
 	},
 	"dependencies": {
+		"@ant-design/colors": "^7.2.0",
 		"@ant-design/icons": "^5.6.0",
 		"@dnd-kit/core": "^6.3.1",
 		"@dnd-kit/modifiers": "^9.0.0",
