--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,57 +1,48 @@
-name: Deploy VitePress site to Pages
+name: Build and Deploy NovoAdmin
 
 on:
-  # 在 main 分支上的推送触发部署
   push:
-    branches: [main]
-  # 允许手动触发部署
-  workflow_dispatch:
-
-# 设置 GITHUB_TOKEN 的权限
-permissions:
-  contents: write
-  pages: write
-  id-token: write
-
-# 只允许同时进行一次部署
-concurrency:
-  group: pages
-  cancel-in-progress: false
+    branches:
+      - main
 
 jobs:
-  # 构建工作
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0 # 不是必需的，但可能对某些插件有用
-      
-      # 1. 首先安装 pnpm
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8
-          run_install: false
-      
-      # 2. 然后设置 Node.js
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: 'pnpm'
-      
-      # 3. 安装依赖
-      - name: Install dependencies
-        run: pnpm install 
-      
-      - name: Build
-        run: pnpm run docs:build
+        uses: actions/checkout@v3
 
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build project
+        run: npm run build
+
+      - name: Archive production artifacts
+        run: |
+          tar czf deploy.tar.gz dist
+
+      - name: Copy to server and deploy
+        uses: appleboy/scp-action@v0.1.4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: docs/.vitepress/dist
-         
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          port: 22
+          source: "deploy.tar.gz"
+          target: "/www/wwwroot/"
+
+      - name: SSH and extract
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          port: 22
+          script: |
+            cd /www/wwwroot
+            rm -rf NovoAdmin
+            mkdir NovoAdmin
+            tar xzf deploy.tar.gz -C NovoAdmin
+            rm deploy.tar.gz
