✨ feat(部署): 更新部署工作流，改用pnpm构建并优化步骤
- 将构建工具从npm更改为pnpm
- 添加pnpm安装和Node.js环境设置步骤
- 更新SSH和文件传输步骤，建议使用最新版本的相关action
- 优化构建和归档步骤，确保使用锁定的依赖版本

✨ feat(部署): 更新pnpm版本并优化部署工作流

- 将pnpm版本更新至9
- 优化Node.js环境设置步骤，保持依赖安装和构建步骤不变
- 确保SSH和文件传输步骤使用最新版本的相关action

✨ feat(模型分组): 优化模型分组接口和角色树组件

- 移除不必要的header导入，简化模型分组接口代码
- 修改角色树组件的onSelect函数，去掉未使用的参数，提升代码可读性

✨ feat(配置): 更新Vite配置以支持新的基础路径

- 在vite.config.ts中添加基础路径设置为"/novoAdmin/"，以便于部署和资源加载

✨ feat(配置): 更新环境变量和Vite配置以支持新的资源路径

- 修改开发和生产环境的API基础URL
- 添加资源基础路径配置
- 更新Vite配置以使用浏览器路由
- 优化全局类型声明，添加新的环境变量支持

style(.env.production): 更新资源基础 URL

- 将 VITE_ASSETS_BASE_URL 从 '/novoadmin' 修改为 '/novoAdmin'
- 此修改统一了资源 URL 的大小写格式

✨ feat(路由): 为用户权限路由添加懒加载支持

- 引入Suspense组件以实现懒加载功能，提升用户体验
- 为目录类型的路由和组件提供统一的Suspense包裹，确保加载时显示友好的加载动画
- 优化代码结构，增强可读性和可维护性

✨ feat(动画): 新增AnimatedTitleFM组件并优化动画效果

- 在animate.tsx中优化了类型导入
- 新增AnimatedTitleFM组件，提供动态标题效果，使用framer-motion实现动画
- 在用户权限路由中引入AnimatedTitleFM，替换加载提示，提升用户体验

✨ feat(动画): 更新AnimatedTitleFM组件和用户权限路由加载提示

- 更新AnimatedTitleFM组件的默认文本为“Looping Animation”，优化动画逻辑，增强循环感
- 在用户权限路由中，将加载提示文本修改为“页面加载中...”，提升用户体验

✨ feat(动画): 修改AnimatedTitleFM组件的标题标签

- 将AnimatedTitleFM组件中的标题标签从<h1>修改为<h3>，以优化页面结构和语义化

✨ feat(动画): 调整AnimatedTitleFM组件的标题字体大小

- 将AnimatedTitleFM组件中的标题字体大小从6xl修改为2xl，以提升页面的视觉效果和可读性。

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,3 +1,5 @@
+# .github/workflows/deploy.yml
+
 name: Build and Deploy NovoAdmin
 
 on:
@@ -6,22 +8,33 @@ on:
       - main
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+
+      # ✨ 这里是需要修改的地方！
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: 9 # 将版本号更新为你的本地主版本，或者更具体的 9.15.4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18.x'
+          cache: 'pnpm'
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Build project
-        run: npm run build
+        run: pnpm build
 
       - name: Archive production artifacts
-        run: |
-          tar czf deploy.tar.gz dist
+        run: tar czf deploy.tar.gz dist
 
       - name: Copy to server and deploy
         uses: appleboy/scp-action@v0.1.4
@@ -34,7 +47,7 @@ jobs:
           target: "/www/wwwroot/"
 
       - name: SSH and extract
-        uses: appleboy/ssh-action@v0.1.10
+        uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
