--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
-		"dev": "echo 'Starting Admin...' && vite",
-		"build": "tsc -b && vite build",
+		"dev": "echo 'Starting Admin...' && vite --mode development",
+		"build": "tsc -b && vite build --mode production",
 		"preview": "vite preview",
 		"docs:dev": "vitepress dev docs",
 		"docs:build": "vitepress build docs",
