--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
-VITE_API_BASE_URL = 'http://localhost:3000'
+VITE_API_BASE_URL = 'http://localhost:3001'
 VITE_API_Suffix_URL = '/admin'
+VITE_ASSETS_BASE_URL = '/'
