--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
-VITE_API_BASE_URL = 'http://localhost:3001'
+VITE_API_BASE_URL = 'https://wendy-idea.top/server'
 VITE_API_Suffix_URL = '/admin'
+VITE_ASSETS_BASE_URL = '/novoadmin'
